Bug: loading overlay not showing

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -123,7 +123,7 @@ body {
     top: 175px;
     right: 15px;
     min-width: 300px;
-    z-index: 999999999999999;
+    z-index: 999;
 }
 
 .custom-toast {
